# ebtask

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.hpp.in  ebtask_config.hpp.in  install.sh
.cache/clangd/index/: guess_input_file.cpp.40324B61A49D79BE.idx  guess_input_file.h.28132B04BEEE75CB.idx  main.cpp.8D59C22ABF8B3F18.idx  read_input_file.cpp.C75C5527BC61C43F.idx  read_input_file.h.2130DB6253D4AA2B.idx
.config/ebtask/: ebtask.config.json  ebtask.layout.json
include/: event.h  map_code.h  rkeylogger.h  utils.h  xdotool.h
include/ebtask/: ebatsk.h  guess_input_file.h  read_input_file.h
src/: CMakeLists.txt  clipboard.cpp  clipboard.h  command_actions.h  config.cpp  config.h  config_validator.cpp  create_layout.cpp  event.cpp  generated_config.hpp  guess_input_file.cpp  guess_input_file.h  keymap.cpp  keymap.h  layout.h  listen.cpp  listen_event.cpp  main.cpp  map_code.cpp  read_input_file.cpp  read_input_file.h  remap_layout.cpp  setup.h  start.cpp  start.h  start_listen.h  stop.cpp  utils.cpp  utils.h  xdotool.cpp  xutils.cpp  xutils.h
src/configuration/: config.cpp  configuration.h  exception.h  keys.cpp  modes.cpp  types.h  utils.cpp  utils.h
src/core/: ebtask_config.hpp  run.cpp  run.hpp
src/core/actions/: actions.hpp  alias.cpp  alias.hpp  configure_layout.cpp  generate_config.cpp  key_handler.cpp  key_handler.hpp  listen_event.cpp  remap_layout.cpp
src/core/config/: config.cpp  config.hpp
src/core/os_inputs/: guess_input_file.cpp  os_inputs.hpp  read_input_file.cpp  udev_wrapper.hpp
src/os/: execute_command.cpp  input.hpp  keyhandler.cpp  keyhandler.hpp  os.hpp  read_devnode_input_file.cpp
src/utils/: exception.h  fs_utils.cpp  fs_utils.hpp  json_utils.hpp  logger.h  logger.hpp  os.cpp  os.hpp  utils.h  xutils.cpp  xutils.h  xutils.hpp
